<resources>
    <string name="app_name">Lista zadań</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_task_title">Tytuł</string>
    <string name="add_task_priority">Priorytet</string>
    <string name="add_task_date">Data</string>
    <string name="btn_add">Dodaj</string>
    <string name="btn_cancel">Anuluj</string>
    <string name="chkBox_state">Zrobione</string>
    <string name="priority1">Wysoki</string>
    <string name="priority2">Sredni</string>
    <string name="priority3">Mały</string>
    <string name="lblTitle">Tytuł: </string>
    <string name="lblDate">Data: </string>
    <string name="lblPriority">Priorytet: </string>
    <string name="btn_delete">Usuń</string>
    <string name="btn_selectDate">Wybierz Datę</string>
    <string name="btn_save">Zapisz</string>
    <string name="menu_add">Dodaj</string>
</resources>
