<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTxtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_task_title"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtViewPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPriority" />

        <RadioGroup
            android:id="@+id/rdGPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rdBtn2">

            <RadioButton
                android:id="@+id/rdBtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority3" />

            <RadioButton
                android:id="@+id/rdBtn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority2" />

            <RadioButton
                android:id="@+id/rdBtn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/priority1" />
        </RadioGroup>

        <EditText
            android:id="@+id/editTxtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_task_date"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chkBox_state" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_add" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_cancel" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>